import type { IHeroController } from "#IControllers/index.ts";
import type { IHero } from "#IEntities/IHero.ts";
import type { ConfigData } from "#Entities/Config.ts";
import { Hero } from "#Entities/Hero.ts";
import { Dialogue } from "#Entities/dialogue/Dialogue.ts";
import { WelcomeHeroSelectionView } from "#UI/WelcomeHeroSelectionView.ts";
import { GameManager } from "#Controllers/GameManager.ts";
import { VideoPreloadService } from "#Services/VideoPreloadService.ts";

export class HeroController implements IHeroController {
  heroes: IHero[] = [];
  currentHero: IHero | null = null;

  welcomeHeroSelectionView: WelcomeHeroSelectionView | null = null;

  private onHeroesLoadedCallbacks: Array<(heroes: IHero[]) => void> = [];
  private onHeroesSwitchedCallbacks: Array<(hero: IHero | null) => void> = [];
  position: { lattitude: number; longitude: number } = {
    lattitude: 48.4,
    longitude: -1.5,
  };

  constructor(configPath: string = "/config.json") {
    this.currentHero = null;
    this.loadHeroesFromConfig(configPath);
  }

  async loadHeroesFromConfig(configPath?: string): Promise<void> {
    const safeConfigPath = configPath ?? "/config.json";
    const response = await fetch(safeConfigPath);

    if (!response.ok) {
      throw new Error(
        `Failed to load config: ${response.status} ${response.statusText}`,
      );
    }

    const configData: ConfigData = await response.json();

    VideoPreloadService.preloadVideos(
      configData.Heroes.map((heroData) => heroData.presentationVideo),
    );

    configData.Heroes.forEach((heroData) => {
      const hero = new Hero(
        heroData.id,
        heroData.name,
        heroData.role,
        heroData.description,
        heroData.bio,
        heroData.portrait,
        heroData.presentationVideo,
        null,
        [],
        heroData.tags,
      );

      if (heroData.presentationDialogue) {
        const parsedDialogue = new Dialogue(
          hero,
          hero.name + "-presentation-dialogue",
          heroData.presentationDialogue,
        );
        hero.presentationDialogue = parsedDialogue;
      }

      // heroes are special and there dialogue should not be able to complete
      // so we add an action at the end of the dialogue that reinitializes the dialogue to the root node
      if (hero.presentationDialogue) {
        hero.presentationDialogue.OnDialogueActions.push(() => {
          if (hero.presentationDialogue) {
            hero.presentationDialogue.Reset();
          }
        });
      }

      this.heroes.push(hero);
    });

    console.log("Heroes added from JSON:", this.heroes);

    this.welcomeHeroSelectionView = new WelcomeHeroSelectionView(
      GameManager.app ?? document.body,
    );

    this.onHeroesLoadedCallbacks.forEach((callback) => callback(this.heroes));
  }

  SwitchHero(hero: IHero): void {
    this.currentHero = hero;
    this.onHeroesSwitchedCallbacks.forEach((callback) =>
      callback(this.currentHero),
    );
  }
  SwitchHeroById(heroId: string): boolean {
    const hero = this.heroes.find((h) => h.id === heroId);
    if (hero) {
      this.currentHero = hero;
      this.onHeroesSwitchedCallbacks.forEach((callback) =>
        callback(this.currentHero),
      );
      return true;
    }

    return false;
  }

  onHeroesLoaded(callback: (heroes: IHero[]) => void): void {
    this.onHeroesLoadedCallbacks.push(callback);
  }

  onHeroesSwitched(callback: (hero: IHero | null) => void): void {
    this.onHeroesSwitchedCallbacks.push(callback);
  }
}
