@startuml project-class-diagram

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 45

title Route du Rome - Project Class Overview

package "Application" as Application {
  class GameManager {
    +init(app): void
  }
}

package "Controllers" as Controllers {
  class HeroController
  class NpcController
  class DialogueController
  class MapController
  class ExperienceController
}

package "Domain" as Domain {
  class Hero
  class Npc
  class Dialogue
  class DialogueTree <<group>> {
    DialogueNode
    Choice
  }
  class NPCDefaultQuest
  class NPCBadge
}

package "Services" as Services {
  class QuestService
  class BadgeService
  class NpcDataService
  class VideoPreloadService
}

package "UI" as UI {
  class DialogueView
  class MapView
  class HeaderHeroSelectionView

  class SecondaryViews <<group>> {
    Dialogue support
    Experience views
    Navigation views
  }
}

package "Configuration" as Configuration {
  class ConfigData
  class NpcData
  class HeroData
  class LevelData
}

Application --> Controllers : assembles
Application --> Services : initializes

Controllers --> Domain : manages
Controllers --> Services : coordinates
Controllers --> UI : updates
Controllers --> Configuration : loads

HeroController --> Hero : selects
NpcController --> Npc : loads
DialogueController --> DialogueView : displays dialogue
MapController --> MapView : displays map
ExperienceController --> QuestService
ExperienceController --> BadgeService

Hero --> Dialogue : presentation dialogue
Npc --> Dialogue : presentation dialogue
Npc --> NPCDefaultQuest : related quests
NPCDefaultQuest --> NPCBadge : reward badge

Dialogue *-- DialogueTree : contains
NpcData ..> Npc : mapped to
HeroData ..> Hero : mapped to
ConfigData *-- NpcData
ConfigData *-- HeroData
ConfigData *-- LevelData

Services --> SecondaryViews : progression feedback
DialogueView --> SecondaryViews : dialogue support
MapView --> SecondaryViews : map/navigation support

note right of Application
  Composition root of the application.
end note

note bottom of Domain
  The domain contains actors, dialogues,
  quests and badges. Small dialogue
  classes are intentionally grouped here.
end note

note bottom of UI
  Secondary views are grouped to keep
  the project overview readable.
end note

@enduml
